@startuml
'https://plantuml.com/class-diagram

package common {
    abstract class BasicDto {
        UUID id
        Instant created
        Instant updated
    }
}

package patient {
    class PatientDTO extends BasicDto {
        IdentityDTO identity
        Set<AddressDTO> addresses
    }
}

package identity {

    class IdentityDTO extends BasicDto {
        String firstName
        String lastName
        String medicalId
        String nationalId
        Instant birthDate
        Instant deathDate
    }

    class NewIdentityDTO {
        String title
        String firstName
        String lastName
    }
}

package address {
    class AddressDTO extends BasicDto {
        String number
        String street
        String zipCode
        String city
        String region
        String department
        String country
    }

    class NewAddressDTO {
        String number
        String street
        String zipCode
        String city
        String region
        String department
        String country
    }
}

package doctor {
    class DoctorDTO extends BasicDto {
        MedicalLicenceDTO licence
        IdentityDTO identity
        Set<AddressDTO> addresses
    }

    class MedicalLicenceDTO extends BasicDto {
        String value
        Instant expires
        Instant issued
        String issuer
        AddressDTO address
    }
}

package procedure {
    class ProcedureDTO extends BasicDto {
        MedicalProcedureEntity.Type type
        Long price
        String name
        String description
        String currency
        Integer version
        Instant versionDate
    }

    class NewProcedureDTO {
        MedicalProcedureEntity.Type type
        Long price
        String name
        String description
        String currency
    }
}

DoctorDTO "1" *-- "many" AddressDTO : contains
DoctorDTO "1" *-- "1" IdentityDTO : contains
DoctorDTO "1" *-- "1" MedicalLicenceDTO : contains

MedicalLicenceDTO "1" *-- "1" AddressDTO : contains

PatientDTO "1" *-- "many" AddressDTO : contains
PatientDTO "1" *-- "1" IdentityDTO : contains

@enduml
